sql-policy.yaml
---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: sql-policy
spec:
  module: registry://c8n.io/vfarcic/kubewarden-crossplane-sql:v0.0.2
  rules:
  - apiGroups: ["devopstoolkitseries.com"]
    apiVersions: ["v1alpha1"]
    resources: ["sqlclaims", "sqls"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    allowed_sizes: ["small", "medium", "large"]
